#68 - Add unit tests
* #68 - Add vitals unit tests

* #68 - Add sync source test

* #68 - Add source test

* #68 - Add tests for data:report