@@ -3,10 +3,16 @@ plugins {
     id("kotlin.hilt")
 }
 
+tasks.withType<Test> {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+}
+
 dependencies {
     api(libs.kotlinx.datetime)
 
     implementation(projects.data.personal)
 
     implementation(projects.core.common)
+
+    testImplementation(projects.core.test)
 }
